# ophanim

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  models.py  pyproject.toml
.iter/: STATE.json  progress.txt
.iter/plans/: PLAN-current.md
cli/: __init__.py  app.py
cli/commands/: ask.py  memory.py  observe.py  probe.py  segment.py  status.py  track.py  transcribe.py
config/: default.yaml
core/: __init__.py  audio.py  errors.py  gpu.py  image.py  sampling.py  video.py
providers/: __init__.py  base.py  lmstudio.py  sam.py  whisper.py
storage/: __init__.py  cache.py  config.py
tests/: __init__.py  test_adaptive.py  test_ask.py  test_audio.py  test_cache.py  test_cli.py  test_errors.py  test_gpu.py  test_observe.py  test_providers.py  test_sampling.py  test_segment.py  test_video.py  test_whisper.py
