[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ophanim"
version = "0.1.0"
description = "Local visual perception layer for agents"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.13",
    "pillow>=11",
    "numpy>=2",
    "typer>=0.23",
    "rich>=13",
    "pydantic>=2",
    "httpx>=0.28",
    "pyyaml>=6",
    "nvidia-ml-py>=12",
    "imageio>=2.36",
    "scikit-learn>=1.6",
    "scipy>=1.13",
    "tqdm>=4.67",
    "click>=8",
]

[project.scripts]
ophanim = "ophanim.__main__:main"

[tool.setuptools.packages.find]
include = ["ophanim*"]
